Update with all old commits
Add changes

--- a/LegacyCloud/plugin.yml
+++ b/LegacyCloud/plugin.yml
@@ -1,3 +1,15 @@
 main: core.LegacyCloud
 version: 1.0.0
 name: LegacyCloudCore
+
+commands:
+  coords:
+    usage: /coords
+  xp:
+    usage: /xp
+  slowchat:
+    usage: /slowchat
+  clearchat:
+    usage: /clearchat
+  lockchat:
+    usage: /lockchat
